# sports-data-pipeline

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: settings.dev.yaml  settings.yaml  team_aliases.yaml
dags/: maintenance_dag.py  sports_data_dag.py
docs/: data-dictionary.md  powerbi-guide.md
scripts/: backfill.py
src/sports_pipeline/: config.py  constants.py
src/sports_pipeline/extractors/fbref/: client.py  match_extractor.py  parser.py  player_extractor.py  team_extractor.py
src/sports_pipeline/extractors/nba/: client.py  game_extractor.py  player_extractor.py  team_extractor.py
src/sports_pipeline/extractors/nfl/: __init__.py  client.py  game_extractor.py  player_extractor.py  team_extractor.py
src/sports_pipeline/loaders/: views.py
src/sports_pipeline/models/bronze/: basketball.py  football.py  soccer.py
src/sports_pipeline/models/gold/: basketball.py  soccer.py
src/sports_pipeline/models/silver/: basketball.py  football.py  soccer.py
src/sports_pipeline/quality/: checks.py
src/sports_pipeline/storage/: parquet_store.py  paths.py
src/sports_pipeline/transformers/nba/: game_transformer.py  player_transformer.py
src/sports_pipeline/transformers/nfl/: game_transformer.py  (+1 more)
src/sports_pipeline/utils/: rate_limiter.py
tests/: conftest.py
tests/integration/: test_pipeline_e2e.py
tests/unit/extractors/: test_nba_extractors.py  test_nfl_extractors.py
tests/unit/loaders/: test_standings_views.py
tests/unit/transformers/: test_nfl_transformers.py  test_transformers.py
(+2 files in other folders)
